# comm_overlap_bench

./: .clang-format  .gitmodules  CC.scorep  CC2.scorep  CMakeLists.txt  CXX.scorep  README.md  build_daint.sh  build_daint_scorep.sh  build_kesch.sh  build_kesch_cuda75.sh  build_kesch_cuda75scorep.sh  build_kesch_cuda80.sh  build_kesch_mvapich2.2.sh  build_kesch_scorep.sh  build_kesch_scorep1.4.sh  build_kesch_scorep_cpu.sh  build_kesch_tds.sh  build_manali.sh  clang-format.cmake  cmakejg.sh  ld.scorep  modules_daint.sh  modules_kesch.env  modules_kesch_cuda75.env  mpicxx.scorep  nvcc.scorep  nvprof.sh  profile_kesch.sh  profile_kesch_cuda75.sh  run_daint.sh  run_daint_scorep.sh  run_kesch.sh  run_kesch_cuda75.sh  run_kesch_cuda75scorep.sh  run_kesch_mvapich2.2.sh  run_kesch_scorep.sh  run_kesch_tds.sh  run_manali.sh  scorep.wrapper  (+2 more)
jenkins/: README  build.sh  env.sh  jenkins.sh  test.sh  test_jenkins.sh
makefiles/: makefile-kesch
makefiles/jg/: cc.scorep  mpicxx.scorep  runjg.sh
mpi_callback/: main.cu  makefile  submit.kesch.slurm
reports/: readme.dom  readme.greinaK80  readme.greinaP100  readme.jg  readme.kesch+mvapich21  readme.kesch+mvapich22  readme.kesch+mvapich22+cmake
src/: CMakeLists.txt  CacheFlush.h  Definitions.h  HoriDiffBenchmark.cpp  HoriDiffReference.cpp  HoriDiffReference.h  HoriDiffRepository.cpp  HoriDiffRepository.h  HorizontalDiffusionFunctions.h  HorizontalDiffusionSA.cpp  HorizontalDiffusionSA.cu  HorizontalDiffusionSA.h  IJKSize.h  Kernel.cu  Kernel.h  MPIHelper.cpp  MPIHelper.h  Options.cpp  Options.h  Repository.cpp  Repository.h  SimpleStorage.cpp  SimpleStorage.h  SimpleSwappableStorage.cpp  SimpleSwappableStorage.h  TestMain.cpp  UnittestEnvironment.cpp  UnittestEnvironment.h  Utils.h  main.cpp  makefile-dom  makefile-greina28  makefile-kesch  wrapmap-greina28
tests/: submit.kesch.slurm  submit.kesch.slurm.openmpi  wrap.sh
